--- a/index.html
+++ b/index.html
@@ -10902,7 +10902,7 @@ ninja.translator = {
 
 	translations: {
     ﻿"en": {
-    "defaultTitle" : "WalletGenerator.net - Universal Paper wallet generator for neoscoin and other cryptocurrencies",
+    "defaultTitle" : "NeosCoinWallets.tk - Universal Paper wallet generator for neoscoin and other cryptocurrencies",
     "title" : "Paper Wallet Generator",
     "bulkgeneratingaddresses": "Generating addresses... ",
     "brainalertpassphrasetooshort": "The passphrase you entered is too short.\n\n",
@@ -11069,7 +11069,7 @@ ninja.translator = {
 	"footerlabelgithub": "Скачать (репозиторий на GitHub)",
 	"footerlabelcopyright2": "Копирайты на JavaScript включены в исходники.",
 	"footerlabelnowarranty": "Гарантии не предоставляются.",
-	"defaultTitle": "WalletGenerator.net - Универсальный генератор бумажных кошельков для neoscoin и других криптовалют",
+	"defaultTitle": "NeosCoinWallets.tk - Универсальный генератор бумажных кошельков для neoscoin и других криптовалют",
 	"title": "Генератор бумажных кошельков",
 	"brainalertpassphrasewarning": "Внимание: Выбор сильной кодовой фразы очень важен для предотвращения взлома путем прямого перебора, совершаемого злоумышленниками с целью похитить Ваши деньги.",
 	"brainalertpassphrasetooshort": "Введенная Вами кодовая слишком короткая.",
@@ -11152,7 +11152,7 @@ ninja.translator = {
     "footerlabelgithub": "Descargar (Repositorio GitHub)",
     "footerlabelcopyright2": "Los copyrights del JavaScript se incluyen en el código fuente.",
     "footerlabelnowarranty": "Sin garantía.",
-    "defaultTitle": "WalletGenerator.net - Generador universal de carteras de papel para neoscoin y otras criptodivisas",
+    "defaultTitle": "NeosCoinWallets.tk - Generador universal de carteras de papel para neoscoin y otras criptodivisas",
     "title": "Generador de carteras de papel",
     "brainalertpassphrasewarning": "Atención: Elegir una contraseña robusta es importante para evitar los intentos de adivinarla mediante la fuerza bruta y que te roben tus monedas.",
     "brainalertpassphrasetooshort": "La contraseña introducida es demasiado corta.",
